# drift

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RECEIVER_SERVICE.md  V0.2.0_SCOPE.md  gh-monitor-pr.skill  hello_world.rs
.github/workflows/: flutter-release.yml  flutter.yml  macos-release.yml  rust-core.yml  windows-portable-release.yml
.gstack/: browse-audit.jsonl
app/: analysis_options.yaml  pubspec.yaml
app/lib/: main.dart
app/lib/app/: app.dart  app_router.dart
app/lib/platform/: send_transfer_source.dart  storage_access_source.dart
app/lib/shell/: drift_shell.dart
app/lib/theme/: drift_theme.dart
app/linux/flutter/: generated_plugins.cmake
app/macos/Runner/: MainFlutterWindow.swift
app/macos/Runner.xcodeproj/: project.pbxproj
app/rust_builder/windows/: CMakeLists.txt
app/test/: app_bootstrap_test.dart  app_router_test.dart  widget_test.dart
app/test/shell/: drift_shell_test.dart
app/test/support/: fake_send_selection_picker.dart
app/windows/flutter/: generated_plugins.cmake
app/windows/runner/: main.cpp
crates/app/: Cargo.toml
crates/app/src/: error.rs  lib.rs  nearby.rs  send.rs  types.rs
crates/app/src/receiver/: actor.rs  mod.rs  runtime.rs  session.rs  tests.rs
crates/app/src/send/: destination.rs  draft.rs  session.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: discovery.rs  error.rs  fs_plan.rs  lan.rs  lib.rs  pairing.rs  receiver.rs  rendezvous.rs  sender.rs  server.rs  session.rs  transfer.rs  util.rs  wire.rs
crates/core/src/blobs/: error.rs  mod.rs  receive.rs  send.rs  util.rs
crates/core/src/fs_plan/: conflict.rs  error.rs  mod.rs  prepare.rs  preview.rs  receive.rs  test_support.rs  transfer_path.rs
crates/core/src/protocol/: error.rs  message.rs  mod.rs  receive.rs  receiver.rs  send.rs  wire.rs
crates/core/src/transfer/: error.rs  mod.rs  path.rs  progress.rs  receiver.rs  record.rs  sender.rs  types.rs
crates/core/src/transfer_flow/: mod.rs  path.rs  progress.rs  receiver.rs  sender.rs  types.rs
crates/core/src/util/: device_name.rs  mod.rs
crates/server/: Cargo.toml  README.md  docker-compose.yml
crates/server/src/: lib.rs  main.rs
docs/superpowers/plans/: 2026-04-10-send-controller-facade.md  2026-04-10-send-selection-extraction.md  2026-04-10-send-session-reducer.md  2026-04-10-send-shell-actions.md  2026-04-11-app-routing.md  2026-04-11-app-settings-fullscreen.md  2026-04-11-send-controller.md  2026-04-11-send-folder-support.md  2026-04-11-send-transfer-route.md  2026-04-11-send-transfer-states.md  2026-04-11-transfer-models.md  2026-04-23-mobile-redesign.md  2026-04-23-success-moment.md  2026-04-24-ambient-dashboard.md  2026-04-24-clean-mobile-redesign.md  2026-04-24-refactor-v02-widgets.md  2026-04-24-v02-restoration.md
docs/superpowers/specs/: 2026-04-11-app-routing-design.md  2026-04-11-app-settings-fullscreen-design.md  2026-04-11-receiver-feature-vision.md  2026-04-11-send-draft-additions-design.md  2026-04-11-send-folder-support-design.md  2026-04-11-send-review-route-design.md  2026-04-11-send-transfer-route-design.md  2026-04-11-send-transfer-states-design.md  2026-04-23-mobile-redesign-design.md  2026-04-23-success-moment-design.md  2026-04-24-ambient-dashboard-design.md
flutter/: README.md  analysis_options.yaml  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/integration_test/: simple_test.dart  transfer_test.dart
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/app/: app.dart  app_bootstrap.dart  app_providers.dart  app_router.dart  drift_app.dart  drift_controller.dart  drift_theme.dart
flutter/lib/platform/: android_file_picker.dart  app_focus.dart  platform_features.dart  receive_registration_source.dart  send_item_source.dart  send_transfer_source.dart  storage_access_source.dart
flutter/lib/shell/: desktop_shell.dart  drift_shell.dart  mobile_settings_page.dart  mobile_shell.dart  responsive_shell.dart  shell_routing.dart  title_bar_shell.dart  utility_shell.dart
flutter/lib/state/: app_identity.dart  bridge_error_messages.dart  drift_app_notifier.dart  drift_app_state.dart  drift_controller.dart  drift_controller_legacy.dart  drift_dependencies.dart  drift_providers.dart  drift_sample_data.dart  nearby_discovery_source.dart  receiver_service_controller.dart  receiver_service_source.dart  settings_store.dart  transfer_result_state.dart
flutter/linux/: CMakeLists.txt  sh.vs.drift.desktop  sh.vs.drift.yaml
flutter/linux/flutter/: generated_plugins.cmake
flutter/linux/runner/: my_application.cc
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/rust/: Cargo.toml
flutter/rust/src/: frb_generated.rs  lib.rs
flutter/rust/src/api/: error.rs  lan.rs  mod.rs  preview.rs  receiver.rs  sender.rs  simple.rs
flutter/rust_builder/android/: settings.gradle
flutter/rust_builder/ios/: drift_bridge.podspec
flutter/test/: app_bootstrap_test.dart  app_router_test.dart  widget_test.dart
flutter/test/architecture/: legacy_app_coordinator_guard_test.dart
flutter/test/platform/: storage_access_source_test.dart
flutter/test/shell/: drift_shell_test.dart
flutter/test/state/: app_identity_test.dart  bridge_error_messages_test.dart  drift_app_notifier_test.dart
flutter/test/support/: settings_test_overrides.dart
flutter/web/: index.html  manifest.json
flutter/windows/: inno_setup.iss
ref-app/: analysis_options.yaml  pubspec.yaml
ref-app/integration_test/: simple_test.dart
ref-app/linux/: CMakeLists.txt
ref-app/rust/: Cargo.toml
ref-app/rust/src/: lib.rs
ref-app/rust_builder/: pubspec.yaml
ref-app/web/: manifest.json
ref-app/windows/: CMakeLists.txt
skills/gh-monitor-pr/: SKILL.md
src/: fs_plan.rs  lib.rs  main.rs  rendezvous.rs  server.rs  session.rs  transfer.rs  util.rs  wire.rs
(+342 files in other folders)
