[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
futures-lite = "2.6"
http-body-util = "0.1"
iroh = "0.96"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5", features = ["util"] }
