[workspace]
members = [
    "crates/app",
    "crates/cli",
    "crates/core",
    "crates/server",
]
exclude = ["flutter/rust", "ref-app/rust"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
futures-lite = "2.6"
http-body-util = "0.1"
iroh = { version = "0.97", features = ["address-lookup-mdns"] }
iroh-blobs = "0.99"
irpc = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
indicatif = "0.17"
mdns-sd = "0.18"
flume = "0.11"
walkdir = "2.5"
thiserror = "2.0"
