[package]
name = "drift-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
drift-core = { path = "../core" }
iroh.workspace = true
iroh-blobs.workspace = true
rand.workspace = true
reqwest.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tracing.workspace = true
