[package]
name = "drift"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
drift-app = { path = "../app" }
drift-core = { path = "../core" }
iroh.workspace = true
mdns-sd.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
