[package]
name = "drift-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
base64.workspace = true
bincode.workspace = true
flume.workspace = true
futures-lite.workspace = true
if-addrs = "0.15"
iroh.workspace = true
iroh-blobs.workspace = true
mdns-sd.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
