[package]
name = "drift-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
drift-core = { path = "../core" }
rand.workspace = true
serde.workspace = true
time.workspace = true
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
http-body-util.workspace = true
serde_json.workspace = true
tower.workspace = true
