[package]
name = "drift_bridge"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
drift-app = { path = "../../crates/app" }
drift-core = { path = "../../crates/core" }
flutter_rust_bridge = "=2.12.0"
iroh = "0.97"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.50", features = ["fs", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
futures-lite = "2.3"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
